--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@types/node": "^16.18.11",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
-    "dotenv": "^16.0.3",
+    "@yarn-tool/dotenv": "^2.0.14",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
